# GroupedGEMM-OPT

./: README.md  fetch_cutlass.sh  pyproject.toml  setup.py
benchmarks/: benchmark.py  benchmark.sh  benchmark_compare.py  benchmark_launch_overhead.py  benchmark_std_vs_te.py  benchmark_te_vs_std.py
csrc/: grouped_gemm.h  grouped_gemm_kernel.cu  grouped_gemm_sm90.cuh  torch_ext.cpp
grouped_gemm/: __init__.py  ops.py
grouped_gemm_opt/: __init__.py  ops.py  triton_fused_moe.py  triton_grouped_gemm.py
patches/: fix_grouped_gemm_tma.patch
